# united_hacks_v7

./: .env.example  .gitignore  README.md  docker-compose.yml
board/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
board/src/: App.tsx  index.css
board/src/components/: LiveNavChart.tsx  NavChart.tsx  ui.tsx
board/src/hooks/: useLiveFund.ts
board/src/lib/: api.ts
board/src/pages/: Demo.tsx  Landing.tsx
data/: ATTRIBUTION.md  checksums.txt
docker/nginx/: nginx.conf
docker/oracle/init/: 01_warehouse.sql
docs/: E0-B01-repo-scaffolding.md  E0-B02-docker-databases.md  E0-B03-grpc-contracts.md  E0-B04-seed-data-pipeline.md  E1-B05-oracle-warehouse.md  E1-B06-sqlserver-ledger-schema.md  E2-B07-brain-skeleton.md  E2-B08-quant-engine.md  E2-B09-quant-grpc.md  E2-B10-ai-referee.md  E3-B11-ledger-skeleton.md  E3-B12-double-entry-ledger.md  E3-B13-state-machine.md  E3-B14-verification-workflow.md  E3-B15-settlement-engine.md  E3-B16-public-api.md  E4-B17-engine-skeleton.md  E4-B18-replay-ticker.md  E4-B19-websocket-hub.md  E4-B20-degradation.md  E5-B21-full-stack-compose.md  E5-B22-e2e-suite.md  E5-B23-demo-hardening.md  R1-review-foundation.md  R2-review-data-platform.md  R3-review-brain.md  R4-review-financial-core.md  R5-review-engine.md  R6-final-review.md  api-contract.md  demo-runbook.md  ws-contract.md
protos/: CHANGELOG.md
protos/boys/brain/v1/: quant.proto  referee.proto
scripts/: build_nav_curve.sh  check_dbs.py  check_dbs.sh  check_stack.sh  demo_up.sh  e2e.sh  fetch_data.sh  fetch_polymarket.py  fetch_polymarket.sh  gen_protos.sh  lint.sh  preflight.sh  reconcile.sh  replay.sh  reset_demo.sh  seed_demo.sh  smoke_ai.sh  test_degradation.sh  verify.sh  ws_watch.sh
services/brain/: Dockerfile  pyproject.toml
services/brain/app/: config.py  db.py  harness.py  logging_setup.py  main.py
services/brain/app/data/: parsers.py  seed_oracle.py
services/brain/app/grpc/: server.py  servicers.py
services/brain/app/quant/: backtest.py  build.py  devig.py  engine.py  repo.py  selector.py  settle.py  valuation.py
services/brain/app/referee/: models.py  providers.py  service.py
services/brain/tests/: test_contracts.py  test_harness.py  test_skeleton.py
services/brain/tests/data/: conftest.py  test_build_nav_curve.py  test_parsers.py  test_repo.py  test_seed_oracle.py
services/brain/tests/data/fixtures/: football_bom.csv  football_closing.csv  football_new.csv  football_old.csv  polymarket.json  spi_matches.csv
services/brain/tests/quant/: test_engine.py  test_quant.py  test_quant_grpc.py  test_valuation.py
services/brain/tests/referee/: test_providers.py  test_referee.py
services/engine/: Dockerfile  go.mod  go.sum
services/ledger/: Boys.Ledger.sln  Dockerfile  openapi.json
services/ledger/migrations/: 001_schema.sql  002_seed.sql  003_indexes_and_checks.sql  004_state_machine.sql  005_settlements.sql
tests/e2e/: conftest.py  helpers.py  pyproject.toml  test_money_paths.py  test_realtime.py  test_resilience.py
(+96 files in other folders)
