[project]
name = "boys-brain"
version = "0.0.1"
description = "BOYS brain service - quant fund + AI referee (owns Oracle)"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.2.0",
    "pytest>=8.0",
    "ruff>=0.15.21",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
