[project]
name = "boys-brain"
version = "0.0.1"
description = "BOYS brain service - quant fund + AI referee (owns Oracle)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.139.0",
    "grpcio>=1.82.1",
    "httpx>=0.28.1",
    "oracledb>=4.0.1",
    "protobuf>=7.35.1",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "grpcio-tools>=1.82.1",
    "mypy>=2.2.0",
    "pytest>=8.0",
    "ruff>=0.15.21",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = [".", "gen"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["gen"]

[tool.black]
line-length = 100
extend-exclude = "/gen/"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["gen/"]

# Generated gRPC stubs are dynamic and not our code to type-check.
[[tool.mypy.overrides]]
module = ["boys.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["grpc", "grpc.*"]
ignore_missing_imports = true
